--- a/product_marble/views/marble_actions.xml
+++ b/product_marble/views/marble_actions.xml
@@ -174,5 +174,15 @@
         <field name="view_type">form</field>
         <field name="context">{"search_default_service":1}</field>
     </record>
+
+    <!-- Input Moves -->
+    <record id="act_open_input_deliver_view" model="ir.actions.act_window">
+        <field name="name">Inputs Deliver</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">stock.move</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_type">form</field>
+        <field name="context">{"search_default_input_deliver":1,'tree_view_ref':'product_marble.view_move_inputs_tree'}</field>
+    </record>
 </data>
 </openerp>
