--- a/product_marble/views/product_view.xml
+++ b/product_marble/views/product_view.xml
@@ -30,6 +30,11 @@
             <!--field name="inherit_id" ref="product.product_template_form_view"/-->
             <field name="inherit_id" ref="account.product_template_form_view"/>
             <field name="arch" type="xml">
+                <group name="inventory" position="inside">
+			<group string="Stock Location" attrs="{'invisible': [('type', '=', 'service')]}" >
+				<field name="location_id" width="200" domain="[('location_id','=', %(product_marble.location_deposito_stock_propio)d)]"/>
+	                </group>
+                </group>
                 <page string="Accounting" position="replace">
                     <page string="Accounting" groups="account.group_account_invoice">
                         <group name="properties">
@@ -120,7 +125,6 @@
         <record id="product_template_only_form_marble_view" model="ir.ui.view">
             <field name="name">product.template.product.form</field>
             <field name="model">product.template</field>
-            <field name="mode">primary</field>
             <field name="priority" eval="7" />
             <field name="inherit_id" ref="product.product_template_only_form_view"/>
             <field name="arch" type="xml">
