--- a/product_marble/views/stock_view.xml
+++ b/product_marble/views/stock_view.xml
@@ -252,6 +252,7 @@
 		<tree colors="grey:state == 'cancel';red:(state not in ('cancel','done')) and date &gt; current_date" string="Moves">
                     <field name="name"/>
                     <field name="picking_id" string="Reference"/>
+                    <field name="employee_image" string="" widget="image" height="48"/>
                     <field name="employee_id" string="Employee"/>
                     <field name="product_id" on_change="onchange_product_id(product_id,location_id,location_dest_id, False)"/>
                     <field name="product_uom_qty" on_change="onchange_quantity(product_id, product_uom_qty, product_uom, product_uos)"/>
