--- a/product_marble/views/stock_change_product_qty_view.xml
+++ b/product_marble/views/stock_change_product_qty_view.xml
@@ -7,7 +7,7 @@
             <field name="inherit_id" ref="stock.view_change_product_quantity"/>
             <field name="arch" type="xml">
                 <field name="location_id" position="attributes">
-			<attribute name="attrs">{'invisible': True}</attribute>
+			<attribute name="domain">[('location_id','=', %(product_marble.location_deposito_stock_propio)d)]</attribute>
 		</field> 
                 <field name="new_quantity" position="replace"/>
                 <field name="product_id" position="replace">
