--- a/product_marble/views/marble_menu.xml
+++ b/product_marble/views/marble_menu.xml
@@ -101,13 +101,13 @@
         <record id="purchase.menu_product_by_category_purchase_form" model="ir.ui.menu">
             <field name="groups_id" eval="[(6,0,[ref('base.group_no_one'),
             ])]"/>
-        </record>
+        </record><!--
         <record id="product_marble.menu_purchase_product_variants" model="ir.ui.menu">
             <field name="groups_id" eval="[(6,0,[ref('base.group_no_one'),
             ])]"/>
         </record>
 
-        <!-- Purchases > Products  -->
+         Purchases > Products  -->
   
         <!-- Purchases > Products > Raw -->
         <menuitem   id="menu_purchase_raw"             name="Raw Material" 
@@ -230,11 +230,12 @@
             ])]"/>
         </record>
 
-        <!-- Purchases > Products > Product -->
+        <!-- Purchases > Products > Product 
         <record id="product_marble.menu_stock_product_variants" model="ir.ui.menu">
             <field name="groups_id" eval="[(6,0,[ref('base.group_no_one'),
             ])]"/>
         </record>
+-->
         <record id="stock.menu_product_by_category_stock_form" model="ir.ui.menu">
             <field name="groups_id" eval="[(6,0,[ref('base.group_no_one'),
             ])]"/>
