correcciones sobre visualizacion de los productos en los default de busqueda

--- a/product_marble/views/marble_actions.xml
+++ b/product_marble/views/marble_actions.xml
@@ -86,30 +86,7 @@
         <field name="res_model">res.partner</field>
         <field name="view_mode">kanban,tree,form</field>
         <field name="view_type">form</field>
-        <field name="context">{"search_default_is_work":1}</field>
-        <field name="help" type="html">
-          <p class="oe_view_nocontent_create">
-            Click to define a new product.
-          </p><p>
-            You must define a product for everything you sell, whether it's
-            a physical product, a consumable or a service you offer to
-            customers.
-          </p><p>
-            The product form contains information to simplify the sale
-            process: price, notes in the quotation, accounting data,
-            procurement methods, etc.
-          </p>
-        </field>
-    </record>
-
-    <!-- Works -->
-    <record id="act_open_works_view" model="ir.actions.act_window">
-        <field name="name">Works</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">res.partner</field>
-        <field name="view_mode">kanban,tree,form</field>
-        <field name="view_type">form</field>
-        <field name="context">{"search_default_is_work":1}</field>
+        <field name="context">{"search_default_is_work":1,"default_is_work":1}</field>
         <field name="help" type="html">
           <p class="oe_view_nocontent_create">
             Click to define a new product.
@@ -132,7 +109,7 @@
         <field name="res_model">product.product</field>
         <field name="view_mode">kanban,tree,form</field>
         <field name="view_type">form</field>
-        <field name="context">{"search_default_raw":1}</field>
+        <field name="context">{"search_default_raw":1,"default_raw":1}</field>
     </record>
 
     <!-- Input -->
@@ -142,7 +119,7 @@
         <field name="res_model">product.template</field>
         <field name="view_mode">kanban,tree,form</field>
         <field name="view_type">form</field>
-        <field name="context">{"search_default_input":1}</field>
+        <field name="context">{"search_default_input":1,"default_input":1}</field>
     </record>
 
     <!-- Input Variant -->
@@ -152,7 +129,7 @@
         <field name="res_model">product.product</field>
         <field name="view_mode">kanban,tree,form</field>
         <field name="view_type">form</field>
-        <field name="context">{"search_default_input":1}</field>
+        <field name="context">{"search_default_input":1,"default_input":1}</field>
     </record>
 
     <!-- Bacha -->
@@ -162,7 +139,7 @@
         <field name="res_model">product.product</field>
         <field name="view_mode">kanban,tree,form</field>
         <field name="view_type">form</field>
-        <field name="context">{"search_default_bacha":1}</field>
+        <field name="context">{"search_default_bacha":1,"default_prod_type":"bacha","default_categ_id":"_validate_data_movil"}</field>
     </record>
 
     <!-- Service -->
@@ -172,7 +149,7 @@
         <field name="res_model">product.product</field>
         <field name="view_mode">kanban,tree,form</field>
         <field name="view_type">form</field>
-        <field name="context">{"search_default_service":1}</field>
+        <field name="context">{"search_default_service":1,"default_service":1}</field>
     </record>
 
     <!-- Input Moves -->
@@ -182,7 +159,7 @@
         <field name="res_model">stock.move</field>
         <field name="view_mode">tree,form</field>
         <field name="view_type">form</field>
-        <field name="context">{"search_default_input_deliver":1,'tree_view_ref':'product_marble.view_move_inputs_tree'}</field>
+        <field name="context">{"search_default_input_deliver":1,"default_input_deliver":1,'tree_view_ref':'product_marble.view_move_inputs_tree'}</field>
     </record>
 </data>
 </openerp>
