actualizacion de imagenes y bug en el product stock change para un nuevo campo(filter)

--- a/product_marble/static/src/css/style.css
+++ b/product_marble/static/src/css/style.css
@@ -10,12 +10,12 @@ margin-left: -200px;
 }
 
 .btn-primary {
-color: #fff;
-background-color: #9C5229;
+color: #000;
+background-color: #cdc2b8;
 border-color: #357ebd;
 }
 
 a {
-color: #9C5229;
+color: #cdc2b8;
 text-decoration: none;
 }
